# ge

./: .gitignore  .gitmodules  CMakeLists.txt  Session.vim  build.sh
.cache/clangd/index/: all.hpp.03885714D82B9AF0.idx  ansicolor_sink-inl.h.BE860A93E3F993AF.idx  ansicolor_sink.h.C6C6E7C8F5A5841C.idx  async.cpp.AC4AB6BD23A6EEEC.idx  async.h.CD0A35B92547E97E.idx  async_logger-inl.h.1E60593A170300A5.idx  async_logger.h.6E44B06FAE9A444E.idx  audio.cpp.97ABF5350689875D.idx  audio.hpp.BBAF7460605D36E8.idx  backtracer-inl.h.5B6BB58DAC957578.idx  backtracer.h.DC2B30F7B6C431CD.idx  base_sink-inl.h.5F4706853B7AA42E.idx  base_sink.h.6A14CADA0E5D6EBD.idx  basic_file_sink-inl.h.C5ABB0ABDA03B52A.idx  basic_file_sink.h.190A2A5F7EB12233.idx  buffer.hpp.B33E61956BB3BF57.idx  bundled_fmtlib_format.cpp.FBCB9998115ACB20.idx  cfg.cpp.C40CBD15246791EC.idx  circular_q.h.411477F2881D30ED.idx  color_sinks.cpp.E56BA7900FFCA8B9.idx  command_buffer.hpp.FBC61C89F2D92BF4.idx  common-inl.h.AF99CEBCCB915396.idx  common.h.24B4785D3773FD3C.idx  console_globals.h.52289242F7374834.idx  context.c.DFF079BD45A8995B.idx  core.h.D67B302F11EE6444.idx  descriptor.cpp.7298B4383094A9DD.idx  descriptor.hpp.506740D4408CFA97.idx  egl_context.c.1B6072A5C18A4BAD.idx  ent.cpp.BAB828573D81BDBC.idx  ent.hpp.C6CA6ECDB048DF55.idx  file_helper-inl.h.EC5B2FADB064A30E.idx  file_helper.h.275919D354A3E74A.idx  file_sinks.cpp.C5CB8C3275C458BD.idx  fmt.h.641FDB26B9479BFD.idx  fmt_helper.h.8BC4E8DCAB8A6A9B.idx  format-inl.h.3E1B20627BB73FC5.idx  format.h.BE845944E7B46959.idx  formatter.h.FBB35BEBA1287C51.idx  framebuffer.cpp.CEBBE46FEA35F7E2.idx  (+113 more)
include/: ent.hpp  ge.hpp  renderer.hpp
include/math/: mat4.hpp  vec2.hpp  vec3.hpp
src/: ent.cpp  ge.cpp  main.cpp  renderer.cpp
src/shaders/: rect.frag  rect.frag.spv  rect.vert  rect.vert.spv
